--- a/static/CSS/styles.css
+++ b/static/CSS/styles.css
@@ -47,7 +47,7 @@ body {
 
 .main-bg {
   position: absolute;
-  width: 1000px;
+  width: 100%;
   height: 1060px;
   left: 50%;
   top: -800px;
@@ -62,7 +62,7 @@ body {
   position: absolute;
   z-index: 2;
   background: rgb(0, 0, 0);
-  background: linear-gradient(0deg, #000000a7 0%, rgba(0, 0, 0, 0.217) 100%);
+  background: linear-gradient(0deg, #000000b9 0%, rgba(0, 0, 0, 0.35) 100%);
 }
 
 .main-font {
@@ -80,15 +80,6 @@ body {
 }
 
 header {
-  width: 100%;
-}
-
-.green {
-  position: absolute;
-  z-index: 1;
-}
-
-.green img {
   width: 100%;
 }
 
@@ -112,6 +103,11 @@ header {
   font-size: var(--subtitle-size);
   font-family: var(--clash-medium);
 }
+.toggle {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
 .title {
   font-family: var(--clash-medium);
   font-size: var(--heading--size);
@@ -119,15 +115,58 @@ header {
 }
 
 .hero {
-  width: 1184px;
-  padding-top: 7rem;
+  width: 100%;
+  padding: 0 10rem;
   line-height: 1;
   margin: 0 auto;
   position: absolute;
-  top: 60px;
-  right: 12%;
+  top: 210px;
+  right: 0%;
   text-align: center;
   z-index: 10;
+}
+.btn-group {
+  width: 323px;
+  margin: 44px auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.btn-group button {
+  height: 44px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  align-items: center;
+  padding: 10px 20px;
+  border: none;
+  background-color: #19281f;
+  color: var(--main-font-color);
+  font-size: 14px;
+  cursor: pointer;
+  transition: box-shadow 0.3s ease;
+  position: relative;
+  font-family: var(--clash-medium);
+  border-radius: 15px;
+}
+
+.btn-group button::before {
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  bottom: -1px;
+  right: -1px;
+  background: linear-gradient(180deg, #27ae5f55, #00271092);
+  z-index: -1;
+  border-radius: inherit;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+}
+
+.btn-group button::before {
+  opacity: 1;
 }
 
 .standart-flex {
